@@ -8,6 +8,7 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
@@ -46,7 +47,7 @@ public class MultipartUtility {
 		// creates a unique boundary based on time stamp
 		boundary = "===" + System.currentTimeMillis() + "===";
 
-		URL url = new URL(requestURL);
+		URL url = URI.create(requestURL).toURL();
 		httpConn = (HttpURLConnection) url.openConnection();
 		httpConn.setConnectTimeout(5000);
 		httpConn.setReadTimeout(5000);
